validate: 2026-03-04-install-configure-metabase-business-intelligence-rhel-9